FIX card height on firefox

--- a/src/components/Card/index.module.css
+++ b/src/components/Card/index.module.css
@@ -31,6 +31,7 @@
   grid-column: 1/2;
   grid-row: 1/3;
   aspect-ratio: 1/1;
+  height: 100%;
   object-fit: cover;
   border-radius: 10px;
 }
